Apr 03 2003  2.9.1  Revamped core timer logic to be MUCH more efficient,
                     especially with large numbers of timers.
Apr 02 2003  2.9.1  Removed configure switch for acpi - now dynamically 
                     detected when the panelfront starts.
Apr 01 2003  2.9.1  Fixed airjack ssid alert to check for the right thing
Mar 30 2003  2.9.1  Updated configure to look for magick better, various other
                     configure tweaks.
                    Added alert for beacons for ssid 'airjack'
                    Restructured some of packetrackers alert handling to make
                     future code easier
                    Added ability to scroll panels ui columns left and right
                    Fixed some new networks not being transmitted to the client
Mar 28 2003  2.9.1  Updated configure to look for ethereal 0.9.10
                    Updated configure to work with autoconfig 2.57... stupid
                     autoconf 2.57 broke things that shouldn't have been broke.
                    Modified cisco_cvs capture type to be ethX:wifiX
Mar 25 2003  2.9.1  More streamlining of internal GPS process, proper 
                     preservation of packet timestamp.
                    Expanded max packet size and added protection for
                     ssid terminator for turbocel packets.
Mar 23 2003  2.9.1  Revamped internal GPS handling, minor other tweaks.
                    Added GPS transmission to drone source
Mar 22 2003  2.9.1  Merged documention from Josh Wright for IDS stuff.
Mar 21 2003  2.9.1  Added CHANCHANGE alert for BSSID's that get a beacon
                     on a different channel
                    Revamped core tracker status and alert output
                    Added BCASTDISCON alert for broadcast deauth/disassoc
                     attacks.
                    Fixed stupid typo screwing up the curses client
Mar 20 2003  2.9.1  Various code cleanups and reorganizations