@@ -1,5 +1,6 @@
 Apr 03 2003  2.9.1  Revamped core timer logic to be MUCH more efficient,
                      especially with large numbers of timers.
+                    Changed prism2_hostap monitor script AGAIN.
 Apr 02 2003  2.9.1  Removed configure switch for acpi - now dynamically 
                      detected when the panelfront starts.
 Apr 01 2003  2.9.1  Fixed airjack ssid alert to check for the right thing
